fix 1 , overflow-auto

--- a/floats_clears/css/styles.css
+++ b/floats_clears/css/styles.css
@@ -38,4 +38,5 @@ section{
   background-color: bisque;
   padding: 1rem;
   border: 1px solid #333;
+  overflow:auto;
 }
